# nswi126_flaky_detector

./: .gitlab-ci-flaky-detector.yml  QUICKSTART.md  README.md  main.py  pyproject.toml
.github/workflows/: flaky-test-detector.yml  tests.yml
example_project/: __init__.py  app.py
example_project/tests/: test_comprehensive_flaky.py  test_flaky.py
flaky_test_detector/: __init__.py  analyzer.py  ci_analyzer.py  cli.py  detector.py  suggester.py
