[project]
name = "flaky-test-detector"
version = "0.1.0"
description = "Automated detection and analysis of flaky tests in Python projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.4.0",
    "pytest-json-report>=1.5.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
]

[project.scripts]
flaky-detector = "flaky_test_detector.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
